# automata-theory

./: README.md
lab1/: Makefile  README.md  config.h  generator  generator.c  hashmap  hashmap.c  hashmap.h  in.txt  out.txt  output_parser  output_parser.c  regex  regex.c
lab1/flex/: lex.yy.c  lexer  lexer.l
lab1/regex/: regex  regex.c
lab1/smc/: SmcRecognizer.c  SmcRecognizer.h  SmcRecognizer.sm  SmcRecognizer_sm.c  SmcRecognizer_sm.h  compile.txt  sm_config.h  smc  smc.c
lab2/: :w  CMakeLists.txt  main.cpp  test  test.c
lab2/archive/: archive_nfa_dfa.cpp  regex_archive.cpp
lab2/ast/: ast.cpp  ast.hpp
lab2/nfa_dfa/: nfa_dfa.cpp  nfa_dfa.hpp
lab2/regex/: regex.cpp  regex.hpp
lab2/test/: catch2.cpp
lab3/: Makefile  lab3.y
lab3/archive/: parser.y
lab3/ast/: ast.cpp  ast.h  ast.hpp
lab3/lexer/: lex.yy.c  lexer.l
lab3/parser/: Makefile  field.txt  field2.txt  lab3  lab3.h  lex.yy.c  lexer.l  parser.tab.c  parser.tab.h  parser.y  prog.txt  prog2.txt  robot_prog.txt
lab3/test/: catch2.cpp
